<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="nombre_app">Visita Zafra</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="acercade1">Visita Zafra</string>
    <string name="acercade2">Aplicación para móviles de la ciudad de Zafra.</string>
    <string name="acercadeversion">Versión 2.1.7</string>
    
    <string name="opcionespanol">Espanol</string>
    <string name="opcioningles">English</string>
    
    <string name = "btnidioma">Idioma</string>
    <string name = "qr">Lector QR</string>
    <string name = "tab1">Inicio</string>
    <string name = "tab2">Info</string>
    <string name = "tab3">Fotos</string>
    
    <string name = "construccion">En Construcción&#8230;</string>
    <string name = "conexion">Esta función requiere Internet&#8230;</string>
    <string name = "salir">¿Seguro que desea salir?</string>
    <string name = "afirmativo">Si</string>
    <string name = "negativo">No</string>
    <string name = "esperar">Espere</string>
    <string name = "cargar">Cargando Agenda&#8230;</string>
   
    <string name="direccion">Dirección:</string>
    <string name="telefono">Telefono:</string>
    <string name="horario">Horario:</string>
    <string name="email">Email:</string>
    <string name="web">Web:</string>
    
    <string name = "imgbtnmonumentoscontentdescription">Ver Monumentos</string>
     
    </resources>
