<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageViewAcercaDe"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@null"
        android:src="@drawable/iconoappgrande" />

    <TextView
        android:id="@+id/txtacercade1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewAcercaDe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/acercade1"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtacercade2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtacercade1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/acercade2"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txtacercade3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtacercade1"
        android:layout_below="@+id/txtacercade2"
        android:layout_marginTop="16dp"
        android:text="@string/acercadeversion" />

    <Button
        android:id="@+id/hidebutton"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="HideButton"
        android:layout_toRightOf="@+id/txtacercade3" />

</RelativeLayout>