<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1">

    <ImageView
        android:id="@+id/imgViewImagenRestaurante"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="3dp"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/tagDireccionRestaurantes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNombreRestaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tagDireccionRestaurantes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewImagenRestaurante" />


    <TextView
        android:id="@+id/TagEmailRestaurantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/email"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TagWebRestaurantes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TagTelefonoRestaurantes" />

    <TextView
        android:id="@+id/tagDireccionRestaurantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/direccion"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TagTelefonoRestaurantes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewImagenRestaurante" />

    <TextView
        android:id="@+id/TagTelefonoRestaurantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/telefono"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TagEmailRestaurantes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagDireccionRestaurantes" />

    <TextView
        android:id="@+id/txtDireccionRestaurantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tagDireccionRestaurantes"
        app:layout_constraintStart_toEndOf="@+id/tagDireccionRestaurantes" />

    <TextView
        android:id="@+id/txtTelefonoRestaurantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TagTelefonoRestaurantes"
        app:layout_constraintStart_toEndOf="@+id/TagTelefonoRestaurantes" />

    <TextView
        android:id="@+id/txtEmailRestaurantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TagEmailRestaurantes"
        app:layout_constraintStart_toEndOf="@+id/TagEmailRestaurantes" />

    <ImageView
        android:id="@+id/imgViewRutaRestaurantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@null"
        android:onClick="VerGPS"
        android:src="@drawable/estado_boton_gpsruta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TagWebRestaurantes" />

    <TextView
        android:id="@+id/TagWebRestaurantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="218dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/web"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TagEmailRestaurantes" />

    <TextView
        android:id="@+id/txtWebRestaurantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/TagWebRestaurantes"
        app:layout_constraintTop_toBottomOf="@+id/TagEmailRestaurantes" />

    <ImageView
        android:id="@+id/imgViewLocRestaurantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@null"
        android:onClick="VerGPSLOC"
        android:src="@drawable/estado_boton_gpsaqui"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TagWebRestaurantes" />


    <ImageView
        android:id="@+id/barrainferior"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/boton_barra_inferior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>

