<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imgViewImagenAlojamiento"
        android:layout_width="0dp"
        android:layout_height="167dp"
        android:layout_marginTop="3dp"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/txtNombreAlojamiento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNombreAlojamiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tagDireccionAlojamiento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewImagenAlojamiento" />


    <TextView
        android:id="@+id/TagEmailAlojamiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/email"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TagWebAlojamientos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TagTelefonoAlojamiento" />

    <TextView
        android:id="@+id/tagDireccionAlojamiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/direccion"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TagTelefonoAlojamiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreAlojamiento" />

    <TextView
        android:id="@+id/TagTelefonoAlojamiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/telefono"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TagEmailAlojamiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagDireccionAlojamiento" />

    <TextView
        android:id="@+id/txtDireccionAlojamientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tagDireccionAlojamiento"
        app:layout_constraintStart_toEndOf="@+id/tagDireccionAlojamiento" />

    <TextView
        android:id="@+id/txtTelefonoAlojamientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TagTelefonoAlojamiento"
        app:layout_constraintStart_toEndOf="@+id/TagTelefonoAlojamiento" />

    <TextView
        android:id="@+id/txtEmailAlojamientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TagEmailAlojamiento"
        app:layout_constraintStart_toEndOf="@+id/TagEmailAlojamiento" />

    <ImageView
        android:id="@+id/imgViewLocAlojamientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@null"
        android:onClick="VerGPSLOC"
        android:src="@drawable/estado_boton_gpsaqui"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TagWebAlojamientos" />

    <ImageView
        android:id="@+id/imgViewRutaAlojamientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@null"
        android:onClick="VerGPS"
        android:src="@drawable/estado_boton_gpsruta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TagWebAlojamientos" />

    <TextView
        android:id="@+id/TagWebAlojamientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="162dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/web"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/barrainferior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TagEmailAlojamiento" />

    <TextView
        android:id="@+id/txtWebAlojamientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TagWebAlojamientos"
        app:layout_constraintStart_toEndOf="@+id/TagWebAlojamientos" />


    <ImageView
        android:id="@+id/barrainferior"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/boton_barra_inferior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TagWebAlojamientos" />
</android.support.constraint.ConstraintLayout>


